--- a/tests/01-test/index.html
+++ b/tests/01-test/index.html
@@ -5,7 +5,7 @@
 	<title>Testing</title>
 
 	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="../../assets/css/styles.css">
+	<!-- <link rel="stylesheet" type="text/css" href=" $dir assets/css/styles.css"> -->
 
 	<!-- javascript -->
 	<script type="text/javascript" src="../../assets/js/react.min.js"></script>
