--- a/tests/02-colleges/index.html
+++ b/tests/02-colleges/index.html
@@ -1,8 +1,21 @@
-<!-- $title: Colleges -->
 
-<!-- $dir: ../../ -->
-<!-- @include ../../includes/head -->
-<link rel="stylesheet" type="text/css" href="styles.css">
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Colleges</title>
+
+	<!-- css -->
+	<!-- <link rel="stylesheet" type="text/css" href=" $dir assets/css/styles.css"> -->
+
+	<!-- javascript -->
+	<script type="text/javascript" src="../../assets/js/react.min.js"></script>
+	<script type="text/javascript" src="../../assets/js/react-dom.min.js"></script>
+	<script type="text/javascript" src="../../assets/js/browser.min.js"></script>
+	<script type="text/jsx" src="../assets/js/script.js"></script>
+
+</head>
+<body>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 
 <!-- Load all other resources here: -->
 <script type="text/babel">
@@ -65,4 +78,5 @@ ReactDOM.render(
 
 </div>
   
-<!-- @include ../../includes/foot -->
+</body>
+</html>
