--- a/tests/01-test/index.html
+++ b/tests/01-test/index.html
@@ -11,7 +11,8 @@
 	<script type="text/javascript" src="../../assets/js/react.min.js"></script>
 	<script type="text/javascript" src="../../assets/js/react-dom.min.js"></script>
 	<script type="text/javascript" src="../../assets/js/browser.min.js"></script>
-	<script type="text/jsx" src="../assets/js/script.js"></script>
+	<script type="text/javascript" src="../../assets/js/underscore-min.js"></script>
+	<!-- <script type="text/jsx" src="../assets/js/script.js"></script> -->
 
 </head>
 <body>
