--- a/tests/02-colleges/index.html
+++ b/tests/02-colleges/index.html
@@ -65,6 +65,7 @@ var CollegeTable = React.createClass({
 var COLLEGES = [
   {name: 'UC Berkeley', city: 'Berkeley', region: 'CA', type: 'semester', grads: 10125, undergrads: {total: 25774, asians: 9300, latinos: 3320}, liveoncampus: {frosh: 0.95, undergrads: 0.26}, sat: 2124, gpa: 3.9},
   {name: 'UC Riverside', city: 'Riverside', region: 'CA', type: 'quarter', grads: 2676, undergrads: {total: 18621, asians: 6713, latinos: 6678}, liveoncampus: {frosh: 0.74, undergrads: 0.31}, sat: 1720, gpa: 3.6},
+  {name: 'UT Austin', city: 'Austin', region: 'TX', type: 'semester', grads: 10994, undergrads: {total: 39979, asians: 7196, latinos: 8679}, liveoncampus: {frosh: 0.639, undergrads: 0.19}, sat: 1859, gpa: 3.63},
   {name: 'University of Washington',  city: 'Seattle', region: 'WA', type: 'quarter', grads: 13635, undergrads: {total: 28933, asians: 7119, latinos: 1813}, liveoncampus: {frosh: 0.65, undergrads: 0.26}, sat: 1795, gpa: 3.75}
 ];
  
